--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ body {
 }
 
 .card {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 img {
